<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragmentmain.MainFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_main_scene">

        <ImageView
            android:id="@+id/iv_prayer_widget"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/grey"
            android:backgroundTint="@color/grey"
            android:scaleType="centerCrop"
            android:contentDescription="@string/widgetwallpaper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/img_dhuhr" />

        <TextView
            android:id="@+id/tv_view_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_view_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_view_latitude" />

        <TextView
            android:id="@+id/tv_view_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_widget_prayer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintBottom_toTopOf="@id/tv_widget_prayer_countdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_widget_prayer_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:text="@string/loading"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/iv_prayer_widget"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_prayer_widget">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:windowSoftInputMode="adjustResize">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/include_quran_quote"
                        layout="@layout/layout_quran_quote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/smaller_margin" />

                    <include
                        android:id="@+id/include_prayer_time"
                        layout="@layout/layout_prayer_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/smaller_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_quran_ayah_quote" />

                    <include
                        android:id="@+id/include_info"
                        layout="@layout/layout_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/include_prayer_time" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        tools:ignore="UselessLeaf" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>

