<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp12">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_700"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp4"
            android:paddingBottom="@dimen/dp4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/dp4"
                android:contentDescription="@string/notification_icon"
                android:src="@drawable/ic_notifications_active_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prayer_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp12"
                android:gravity="end"
                android:text="@string/loading"
                android:textStyle="bold" />

        </TableRow>

        <!--Fajr-->
        <TableRow>

            <CheckBox android:id="@+id/cb_fajr" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/fajr"
                android:fontFamily="@font/sourcesanspro_bold" />

            <TextView
                android:id="@+id/tv_fajr_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />

        </TableRow>

        <!--Dhuhur-->
        <TableRow>

            <CheckBox
                android:id="@+id/cb_dhuhr"
                android:layout_width="@dimen/list_width_size"
                android:layout_height="@dimen/list_width_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/dhuhr"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dhuhr_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />

        </TableRow>

        <!--Asr-->
        <TableRow>

            <CheckBox
                android:id="@+id/cb_asr"
                android:layout_width="@dimen/list_width_size"
                android:layout_height="@dimen/list_width_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/asr"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_asr_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
        </TableRow>

        <!--Maghrib-->
        <TableRow>

            <CheckBox android:id="@+id/cb_maghrib" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/maghrib"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_maghrib_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
        </TableRow>

        <!--Isha-->
        <TableRow>

            <CheckBox android:id="@+id/cb_isha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/isha"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_isha_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</androidx.cardview.widget.CardView>